# Guiden

./: BACKGROUND_JOBS_QUICKREF.md  BACKGROUND_JOBS_README.md  BACKGROUND_JOBS_SUMMARY.md  BACKGROUND_SETUP.md  BACKGROUND_VIDEO_GUIDE.md  BACKGROUND_VIDEO_QUICKREF.txt  BIGQUERY_CHECKLIST.md  BIGQUERY_FEATURES.md  BIGQUERY_INTEGRATION_GUIDE.md  BIGQUERY_QUICKSTART.md  BIGQUERY_QUICK_REFERENCE.md  BIGQUERY_README.md  COURSE_SCRAPER_DOCUMENTATION.md  COURSE_SCRAPER_SUMMARY.md  DASHBOARD_QUICK_START.md  Dockerfile  Dockerfile.socket  Dockerfile.worker  FIREBASE_ROLLOUT_PLAN.md  FUTURISTIC_DASHBOARD_FEATURES.md  GCP_SETUP_GUIDE.md  GEMINI_CAREER_INSIGHTS.md  GEMINI_RESUME_OPTIMIZER.md  GEMINI_SKILL_GAP_ANALYZER.md  GLASSMORPHISM_UI_TRANSFORMATION.md  IMPLEMENTATION_SUMMARY.md  MESH_WAVE_GUIDE.md  NEWS_API_QUICKREF.txt  NEWS_API_QUICKSTART.md  NEWS_API_SETUP_GUIDE.md  NEWS_API_SUMMARY.md  PACKAGE_ADDITIONS.md  QUICK_DEPLOY.md  README.md  ROLLOUT_PACKAGE_README.md  SECRETS_SETUP.md  VISUAL_SHOWCASE.md  add-background-video.sh  apphosting.yaml  deploy.sh  (+6 more)
docs/: ENGLISH_HELPER.md  blueprint.md
public/: README.md  background-info.js
scripts/: setup-bigquery.sh
src/ai/: dev.ts
src/app/: globals.css  layout.tsx  page.tsx
src/careeros___ai_career_development_assistant/: crew.py  main.py
src/components/: CareerUpdatesWidget.tsx  NodeDetailPanel.tsx  app-layout.tsx  global-background-video.tsx  nav-mobile.tsx  nav.tsx  top-header.tsx
src/hooks/: use-background-jobs.ts
src/lib/: ai-project-generator.ts  certification-recommender.ts  types.ts  (+2 more)
tests/: job-manager.test.ts
(+69 files in other folders)
